fixed navbar spacing and roommate buttons

--- a/client/src/components/RoommateCardWrapper/RoommateCardWrapper.css
+++ b/client/src/components/RoommateCardWrapper/RoommateCardWrapper.css
@@ -8,7 +8,7 @@
 
 .user-card {
     width: 300px !important;
-    height: 480px;
+    height: 460px;
     margin-bottom: 20px;
     -webkit-box-shadow: 3px 4px 18px -2px rgba(0,0,0,0.75);
     -moz-box-shadow: 3px 4px 18px -2px rgba(0,0,0,0.75);
@@ -37,7 +37,6 @@
 }
 
 .dash-header {
-    margin-top: -5px;
     margin-bottom: 5px;
 }
 
